# feecc-spoke-daemon

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  Display.py  Makefile  README.md  Spoke.py  Types.py  Views.py  Worker.py  _logging.py  config.yaml  emulate-hid-event.py  exceptions.py  feecc-spoke-daemon.service  funcs.py  install.py  main.py  mypy.ini  pyproject.toml  requirements.txt  uninstall.py
.github/workflows/: python_ci.yml
feecc_spoke/: Alerts.py  Display.py  Employee.py  Exceptions.py  Spoke.py  State.py  Types.py  ViewBase.py  Views.py  _Singleton.py  models.py  utils.py
feecc_spoke/waveshare_epd/: epd2in13d.py  epdconfig.py
waveshare_epd/: epd2in13d.py  epdconfig.py
