[tool.poetry]
name = "feecc-spoke-daemon"
version = "0.1.0"
description = "Feecc QA system Spoke daemon"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
requests = "^2.25.1"
PyYAML = "^5.4.1"
Pillow-PIL = "^0.1dev"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
