[tool.poetry]
name = "feecc-spoke-daemon"
version = "0.1.0"
description = "Feecc QA system Spoke daemon"
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]
license = "GNU GPL v3"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
requests = "^2.25.1"
PyYAML = "^5.4.1"
Pillow-PIL = "^0.1dev"
"RPi.GPIO" = "0.7.1a4"
#"Jetson.GPIO" = "^2.0.17"
spidev = "^3.5"
types-requests = "^2.25.0"
types-PyYAML = "^5.4.3"
loguru = "^0.5.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.6b0"
pylint = "^2.9.3"
vulture = "^2.3"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
exclude = ".*epd.*"
ignore_missing_imports  = true
allow_subclassing_any = true

[[tool.mypy.overrides]]
module = "feecc_spoke.waveshare_epd.*"
follow_imports = "skip"

[tool.black]
line-length = 120
